--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-serde = { version = "1", optional = true }
+serde = { version = "1", optional = true, features = ["derive"] }
 
 ## servers 
 # actix 
@@ -19,9 +19,12 @@ serde_qs = { version = "0.12", optional = true }
 # serde 
 serde_json = { version = "1", optional = true }
 futures = "0.3.29"
+http = { version = "1.0.0", optional = true }
+ciborium = { version="0.2.1", optional = true }
 
 [features]
 actix = ["dep:actix-web"]
-axum = ["dep:axum"]
+axum = ["dep:axum", "dep:http"]
 serde_json = ["dep:serde", "dep:serde_json"]
 url = ["dep:serde", "dep:serde_qs"]
+cibor = ["dep:ciborium"]
