--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,10 +21,12 @@ serde_json = { version = "1", optional = true }
 futures = "0.3.29"
 http = { version = "1.0.0", optional = true }
 ciborium = { version="0.2.1", optional = true }
+hyper = { version = "0.14", optional = true }
+bytes = "1.5.0"
 
 [features]
 actix = ["dep:actix-web"]
-axum = ["dep:axum", "dep:http"]
+axum = ["dep:axum", "dep:http", "dep:hyper"]
 serde_json = ["dep:serde", "dep:serde_json"]
 url = ["dep:serde", "dep:serde_qs"]
 cibor = ["dep:ciborium"]
