--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,10 +23,12 @@ http = { version = "1.0.0", optional = true }
 ciborium = { version="0.2.1", optional = true }
 hyper = { version = "0.14", optional = true }
 bytes = "1.5.0"
+async-trait = "0.1.74"
 
 [features]
 actix = ["dep:actix-web"]
 axum = ["dep:axum", "dep:http", "dep:hyper"]
 serde_json = ["dep:serde", "dep:serde_json"]
 url = ["dep:serde", "dep:serde_qs"]
-cibor = ["dep:ciborium"]
+cbor = ["dep:ciborium", "dep:serde"]
+request = ["dep:http"]
