Change Res to be correct, add a generic, and make url/request compile again

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,4 +32,4 @@ axum = ["dep:axum", "dep:http", "dep:hyper"]
 serde_json = ["dep:serde", "dep:serde_json"]
 url = ["dep:serde", "dep:serde_qs"]
 cbor = ["dep:ciborium", "dep:serde"]
-request = ["dep:http"]
+request = ["dep:http", "dep:hyper"]
