Moving closer to a working impl. Implementing all this Request/Response API will be so much fun

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ thiserror = "1.0.50"
 [features]
 actix = ["dep:actix-web"]
 axum = ["dep:axum", "dep:http", "dep:hyper"]
-serde_json = ["dep:serde", "dep:serde_json"]
-url = ["dep:serde", "dep:serde_qs"]
+json = ["dep:serde", "dep:serde_json"]
+url_json = ["dep:serde", "dep:serde_json"]
 cbor = ["dep:ciborium", "dep:serde"]
-request = ["dep:http", "dep:hyper"]
+manual = ["dep:http", "dep:hyper", "dep:serde"]
