--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ serde = { version = "1", features = ["derive"] }
 ## servers 
 # actix 
 actix-web = { version = "4", optional = true }
+send_wrapper = { version = "0.6", features = ["futures"], optional = true }
+
 # axum
 axum = { version = "0.7", optional = true }
 
@@ -30,11 +32,15 @@ rkyv = { version = "0.7", features = [
   "uuid",
   "strict",
 ], optional = true }
-send_wrapper = { version = "0.6", features = ["futures"], optional = true }
+
+# client
+gloo-net = { version = "0.5", optional = true }
+js-sys = { version = "0.3", optional = true }
 
 [features]
 actix = ["dep:actix-web", "dep:send_wrapper"]
 axum = ["dep:axum", "dep:http", "dep:hyper", "dep:http-body-util"]
+browser = ["dep:gloo-net", "dep:js-sys", "dep:send_wrapper"]
 json = ["dep:serde_json"]
 url = ["dep:serde_qs"]
 cbor = ["dep:ciborium"]
