refactor automatic registration and handler into `server_fn` crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-inventory = "0.3"
 serde = { version = "1", features = ["derive"] }
 send_wrapper = { version = "0.6", features = ["futures"], optional = true }
 
+# registration system
+inventory = "0.3"
+dashmap = "5"
+once_cell = "1"
 
 ## servers 
 # actix 
