--- a/examples/axum_example/Cargo.toml
+++ b/examples/axum_example/Cargo.toml
@@ -10,10 +10,13 @@ axum = "0.7.2"
 gloo-net = "0.5.0"
 inventory = "0.3.13"
 serde = { version = "1.0.193", features = ["derive"] }
-server_fns = { version = "0.1.0", path = "../..", features = [
+server_fns = { version = "0.1.0", path = "../../server_fn", features = [
 	"axum",
 	"json",
 	"browser",
 	"url",
+] }
+server_fn_macro_default = { version = "0.1.0", path = "../../server_fn_macro_default", features = [
+	"ssr",
 ] }
 tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
