--- a/server_fn_macro/Cargo.toml
+++ b/server_fn_macro/Cargo.toml
@@ -14,6 +14,7 @@ proc-macro2 = "1"
 proc-macro-error = { version = "1", default-features = false }
 xxhash-rust = { version = "0.8.6", features = ["const_xxh64"] }
 const_format = "0.2.30"
+convert_case = "0.6.0"
 
 [features]
 nightly = []
