--- a/examples/axum/Cargo.toml
+++ b/examples/axum/Cargo.toml
@@ -38,9 +38,12 @@ server_fns = { path = "/Users/gjohnston/Documents/Projects/server_fns/server_fn"
     "json",
     "browser",
     "cbor",
+    "multipart",
 ] }
 server_fn_macro_default = { path = "/Users/gjohnston/Documents/Projects/server_fns/server_fn_macro_default" }
 tokio-stream = { version = "0.1.14", optional = true, features = ["time"] }
+web-sys = { version = "0.3", features = ["FileList", "FormData"] }
+bytes = "1.5.0"
 
 [features]
 hydrate = ["tachys/web"]
