--- a/examples/axum/Cargo.toml
+++ b/examples/axum/Cargo.toml
@@ -33,14 +33,14 @@ wee_alloc = { version = "0.4.5" }
 hyper = { version = "1.0.1", optional = true }
 gloo-timers = { version = "0.3.0", features = ["futures"] }
 send_wrapper = { version = "0.6.0", features = ["futures"] }
-server_fns = { path = "/Users/gjohnston/Documents/Projects/server_fns/server_fn", features = [
+server_fns = { path = "../../server_fn", features = [
     "url",
     "json",
     "browser",
     "cbor",
     "multipart",
 ] }
-server_fn_macro_default = { path = "/Users/gjohnston/Documents/Projects/server_fns/server_fn_macro_default" }
+server_fn_macro_default = { path = "../../server_fn_macro_default" }
 tokio-stream = { version = "0.1.14", optional = true, features = ["time"] }
 web-sys = { version = "0.3", features = ["FileList", "FormData"] }
 bytes = "1.5.0"
