--- a/server_fn_macro_default/Cargo.toml
+++ b/server_fn_macro_default/Cargo.toml
@@ -17,3 +17,5 @@ server_fn_macro = { path = "../server_fn_macro" }
 [features]
 nightly = ["server_fn_macro/nightly"]
 ssr = ["server_fn_macro/ssr"]
+actix = ["server_fn_macro/actix"]
+axum = ["server_fn_macro/axum"]
