--- a/examples/axum_example/Cargo.toml
+++ b/examples/axum_example/Cargo.toml
@@ -18,5 +18,6 @@ server_fns = { version = "0.1.0", path = "../../server_fn", features = [
 ] }
 server_fn_macro_default = { version = "0.1.0", path = "../../server_fn_macro_default", features = [
 	"ssr",
+	"axum",
 ] }
 tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
