handle client-side redirects

--- a/examples/axum/Cargo.toml
+++ b/examples/axum/Cargo.toml
@@ -40,7 +40,9 @@ server_fns = { path = "../../server_fn", features = [
     "cbor",
     "multipart",
 ] }
-server_fn_macro_default = { path = "../../server_fn_macro_default" }
+server_fn_macro_default = { path = "../../server_fn_macro_default", features = [
+    "axum",
+] }
 tokio-stream = { version = "0.1.14", optional = true, features = ["time"] }
 web-sys = { version = "0.3", features = [
     "Blob",
