--- a/examples/axum/Cargo.toml
+++ b/examples/axum/Cargo.toml
@@ -51,6 +51,7 @@ web-sys = { version = "0.3", features = [
     "FormData",
 ] }
 bytes = "1.5.0"
+tower-request-id = { version = "0.3.0", optional = true }
 
 [features]
 hydrate = ["tachys/web"]
@@ -64,6 +65,7 @@ ssr = [
     "server_fns/axum",
     "server_fn_macro_default/ssr",
     "dep:tokio-stream",
+    "dep:tower-request-id",
 ]
 
 # Defines a size-optimized profile for the WASM bundle in release mode
