--- a/server_fn/Cargo.toml
+++ b/server_fn/Cargo.toml
@@ -23,6 +23,8 @@ actix-web = { version = "4", optional = true }
 
 # axum
 axum = { version = "0.7", optional = true, features = ["multipart"] }
+tower = { version = "0.4", optional = true }
+tower-layer = { version = "0.3", optional = true }
 
 ## input encodings 
 serde_qs = { version = "0.12", optional = true }
@@ -63,7 +65,14 @@ reqwest = { version = "0.11", default-features = false, optional = true, feature
 
 [features]
 actix = ["dep:actix-web", "dep:send_wrapper"]
-axum = ["dep:axum", "dep:http", "dep:hyper", "dep:http-body-util"]
+axum = [
+  "dep:axum",
+  "dep:http",
+  "dep:hyper",
+  "dep:http-body-util",
+  "dep:tower",
+  "dep:tower-layer",
+]
 browser = [
   "dep:gloo-net",
   "dep:js-sys",
